# solfunmeme-dioxus

./: .service-manifest  404.html  Cargo.toml  Dioxus.toml  Makefile  build.sh  flake.nix  serve.sh  shard.sh  vercel.json
.github/workflows/: build.yml  cloudflare-pages.yml  deploy-all.yml  pages.yml
.ragit/: index.json  models.json  usages.json
.ragit/configs/: api.json  build.json  query.json
assets/: shard-loader.js  solfunmeme-dioxus-dxhf0c60c3cf3c844b.js  tailwind-dxh79a467476374f5da.css
deploy/terraform/: main.tf  versions.tf
docs/: 404.html  index.html
docs/assets/: shard-loader.js  solfunmeme-dioxus-dxh142a6fdd4c7b65f1.js  solfunmeme-dioxus-dxh14401eff7f27947.js  solfunmeme-dioxus-dxh2b5cee5fa7e367b3.js  solfunmeme-dioxus-dxhaefbb0912b97116f.js  solfunmeme-dioxus-dxhc2b7b947fdeaa462.js  solfunmeme-dioxus-dxhd539f0b14e592522.js
docs/assets/shards/: manifest.json  shard_00.wasm  shard_01.wasm  shard_02.wasm  shard_03.wasm  shard_04.wasm  shard_05.wasm  shard_06.wasm  shard_07.wasm  shard_08.wasm  shard_09.wasm  shard_10.wasm  shard_11.wasm  shard_12.wasm  shard_13.wasm  shard_14.wasm  shard_15.wasm  shard_16.wasm  shard_17.wasm  shard_18.wasm  shard_19.wasm  shard_20.wasm  shard_21.wasm  shard_22.wasm  shard_23.wasm  shard_24.wasm  shard_25.wasm  shard_26.wasm  shard_27.wasm  shard_28.wasm  shard_29.wasm  shard_30.wasm  shard_31.wasm  shard_32.wasm  shard_33.wasm  shard_34.wasm  shard_35.wasm  shard_36.wasm  shard_37.wasm  shard_38.wasm  (+32 more)
rrust_kontekst/: Cargo.toml
rrust_kontekst/src/: lib.rs
rrust_kontekst_base/: Cargo.toml
rrust_kontekst_base/src/: lib.rs
src/: app.rs  embedself.rs  header.rs  lib.rs  main.rs  plugin.rs
src/core/: declaration_splitter.rs
src/model/: erdfa.rs  metameme.rs  mod.rs  ontology_mcp_bridge.rs  prime_ontology.rs
src/playground/: app.rs  bert_test.rs  coverage_app.rs  doc_cleaner.rs  embedding.rs  markdown_processor.rs  mcp.rs  mod.rs  monster_meta_meme.rs  orbits.rs  polygon.rs  rust_parser.rs  solfunmeme.rs  solfunnice.rs  test_animations.rs  wikidata.rs
src/playground/_graveyard/: coverage_app.rs  doc_cleaner.rs  embedding.rs  test_app.rs  wikidata.rs
src/stubs/: mod.rs
src/views/: clusters.rs  dao_governance.rs  mod.rs  p2p_sharing.rs  pastebin_view.rs
