[package]
name =  "rrust_kontekst"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features=["full"] }
rrust_kontekst_base = { path = "../rrust_kontekst_base" }
log = "0.4"

[lib]
name = "rrust_kontekst"
path = "src/lib.rs"
proc-macro = true
